# Research-Agent

./: .gitignore  Data_load_extract.py  RAG_Tool.py  app.py  docker-compose.yml  main.py  memory_loader.py  prompt.py  pyproject.toml  t1.py  test.py  tools.py
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
