[project]
name = "research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-core>=1.2.7",
    "langchain-groq>=1.1.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "langgraph-checkpoint-postgres>=3.0.3",
    "openpyxl>=3.1.5",
    "psycopg[binary-pool]>=3.3.2",
    "psycopg-binary>=3.3.2",
    "pydantic>=2.12.5",
    "pydub>=0.25.1",
    "selenium>=4.40.0",
    "speechrecognition>=3.14.5",
    "undetected-chromedriver>=3.5.5",
    "langchain-community>=0.4.1",
    "boto3>=1.42.36",
    "pypdf>=6.6.2",
    "langsmith>=0.6.4",
    "langchain-text-splitters>=1.1.0",
    "langchian>=0.2.5",
    "langchain>=1.2.7",
    "gradio>=4.0",
]
